public interface Predator {
    void hunt(Animal prey);
}
