classDiagram
    class Creature {
        - energy: int = 100
        + name: String
        + species: String
        + Creature(name, species)
        + move()
        + rest()
        + getEnergy(): int
        # changeEnergy(delta)
    }

    class Animal {
        <<abstract>>
        + Animal(name, species)
        + makeSound()
    }

    class Kappa {
        + Kappa(name, species)
        + makeSound()
        + swim()
        + move()
    }

    class Ningyo {
        + Ningyo(name, species)
        + makeSound()
        + swim()
        + hunt(prey)
        + move()
    }

    class Tombo {
        + Tombo(name, species)
        + makeSound()
        + fly()
        + move()
    }

    class Jorogumo {
        + Jorogumo(name, species)
        + makeSound()
        + bite(target: Animal)
        + move()
    }

    class Katatsumuri {
        + Katatsumuri(name, species)
        + makeSound()
        + move()
    }

    class Utils {
        + makeSwim(creature: Swimmer)
    }

    interface Swimmer {
        + swim()
    }

    interface Flyer {
        + fly()
    }

    interface Predator {
        + hunt(prey: Animal)
    }

    Creature <|-- Animal
    Animal <|-- Kappa
    Animal <|-- Ningyo
    Animal <|-- Tombo
    Animal <|-- Jorogumo
    Animal <|-- Katatsumuri

    Swimmer <|.. Kappa
    Swimmer <|.. Ningyo
    Flyer <|.. Tombo
    Predator <|.. Ningyo

    Utils ..> Swimmer : uses
    Jorogumo ..> Animal : bite()
    Ningyo ..> Animal : hunt()
